added rainbow mode and reset button

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
     <button class="button">Click</button>
     <div class="container"></div>
-    
-
+    <button id="rainbow">rainbow mode</button>
+    <button id="black">Reset </button>
+    <button id="color">Color</button>
 
     <!-- Scripts -->
     <script src="script.js"></script>
